@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2010, 2023 BSI Business Systems Integration AG
+ * Copyright (c) 2010, 2026 BSI Business Systems Integration AG
  *
  * This program and the accompanying materials are made
  * available under the terms of the Eclipse Public License 2.0
@@ -103,7 +103,7 @@ public final class SerializationTestUtility {
         .map(File::new)
         .filter(File::exists)
         .sorted()
-        .collect(Collectors.toList());
+        .toList();
     JandexInventoryBuilder inventoryBuilder = new JandexInventoryBuilder(RebuildStrategy.IF_MISSING) {
       @Override
       public void scanAllModules() {
