@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2010, 2023 BSI Business Systems Integration AG
+ * Copyright (c) 2010, 2026 BSI Business Systems Integration AG
  *
  * This program and the accompanying materials are made
  * available under the terms of the Eclipse Public License 2.0
@@ -39,7 +39,7 @@ public class Namespaces {
         .filter(IClassInfo::isInstanciable)
         .map(classInfo -> (INamespace) BeanInstanceUtil.createBean(classInfo.resolveClass()))
         .sorted(Comparator.comparing(INamespace::getOrder).thenComparing(namespace -> namespace.getClass().getName())) // FQN fallback in case of identical orders
-        .collect(Collectors.toList());
+        .toList();
 
     // Validate presence of ID
     namespaces.stream()
