@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2010, 2023 BSI Business Systems Integration AG
+ * Copyright (c) 2010, 2026 BSI Business Systems Integration AG
  *
  * This program and the accompanying materials are made
  * available under the terms of the Eclipse Public License 2.0
@@ -131,7 +131,7 @@ public class DefaultSerializerBlacklist implements Predicate<String> {
           return c;
         })
         .distinct()
-        .collect(Collectors.toList());
+        .toList();
     if (prefixes.isEmpty()) {
       return c -> false;
     }
@@ -158,7 +158,7 @@ public class DefaultSerializerBlacklist implements Predicate<String> {
           return c;
         })
         .distinct()
-        .collect(Collectors.toList());
+        .toList();
     if (prefixes.isEmpty()) {
       return c -> false;
     }
