@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2010, 2023 BSI Business Systems Integration AG
+ * Copyright (c) 2010, 2026 BSI Business Systems Integration AG
  *
  * This program and the accompanying materials are made
  * available under the terms of the Eclipse Public License 2.0
@@ -123,7 +123,7 @@ public final class SerializationUtility {
         .flatMap(regexList -> Arrays.stream(regexList.split(",")))
         .map(String::trim)
         .filter(s -> !s.isEmpty())
-        .collect(Collectors.toList());
+        .toList();
     if (regexParts.isEmpty()) {
       return c -> defaultWhenEmpty;
     }
